--- a/ToDoList/ToDo-App-Tests/ToDo-App-Tests.csproj
+++ b/ToDoList/ToDo-App-Tests/ToDo-App-Tests.csproj
@@ -7,7 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ToDo-Domain-Entities\ToDo-Domain-Entities.csproj" />
+    <ProjectReference Include="..\ToDoList\ToDoList-Mvc-UI.csproj" />
   </ItemGroup>
 
 </Project>
