--- a/ToDoList/ToDoList/appsettings.json
+++ b/ToDoList/ToDoList/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoListConnection": "Data Source=VLD; Database=ToDoList; User ID='sa'; Password='sa'; MultipleActiveResultSets=True;"
+    "ToDoListConnection": "Data Source=sql.bsite.net\\MSSQL2016;Initial Catalog=todolist_; User ID=todolist_; Password=1234;",
+    "Provider Name": "System.Data.SqlClient"
   }
 }
